# sql-rule-extractor

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VIEWING_GUIDE.md  config.yml  example_usage.py  pyproject.toml  requirements.txt  setup.sh  verify_installation.py  view_drd.html
.github/workflows/: ci.yml
sample_repos/sample_sql_app/: app.py  procedures.sql  schema.sql
src/: __init__.py  cli.py
src/extractor/: __init__.py  app_parser.py  clusterer.py  drd_generator.py  enricher.py  ingest.py  rule_normalizer.py  sql_parser.py
src/utils/: io.py  logging.py  svg_visualizer.py  trace_validator.py
tests/: __init__.py  test_clusterer.py  test_integration_end_to_end.py  test_rule_normalizer.py  test_sql_parser.py
